before production: just saving

--- a/flow2and4/pyduck/community/templates/community/post/render_post_list_item.html.jinja
+++ b/flow2and4/pyduck/community/templates/community/post/render_post_list_item.html.jinja
@@ -17,7 +17,7 @@
                 </div>
                 <div>
                     <small> {{ post.user.nickname }}님이
-                        <pd-relative-time datetime="{{ post.created_at }}"></pd-relative-time> {{ c.name }} 관련 작성
+                        <sl-relative-time date="{{ post.created_at }}" lang="ko"></sl-relative-time> {{ c.name }} 관련 작성하심
                     </small>
                 </div>
             </div>
