--- a/flow2and4/pyduck/templates/pyduck/header/header.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/header/header.html.jinja
@@ -28,12 +28,15 @@
                             data-bs-toggle="dropdown"
                             data-bs-auto-close="true"
                             aria-expanded="false"
-                            data-bs-offset="0,5">
+                            data-bs-offset="0,5"
+                            hx-get="{{ url_for('pyduck.community.index', category='life') }}"
+                            hx-target="[data-notification-container]"
+                            hx-swap="innerHTML">
                         <span class="fs-5">
                             <i class="bi bi-bell"></i>
                         </span>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-end pt-0">
+                    <ul class="dropdown-menu dropdown-menu-end pt-0" data-notification-container>
                         <li></li>
                     </ul>
                 </div>
