--- a/flow2and4/pyduck/community/templates/community/post/new.html.jinja
+++ b/flow2and4/pyduck/community/templates/community/post/new.html.jinja
@@ -19,7 +19,8 @@
                 <div class="fs-4 fw-bold">
                     <i class="bi bi-pencil-square"></i> 글 쓰는 중
                 </div>
-                <form action="{{ url_for('pyduck.community.post_new', category=c.code) }}" method="POST">
+                <form action="{{ url_for('pyduck.community.post_new', category=c.code) }}" method="POST"
+                      data-editor-type="new-post">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                     <div class="pt-3">
                         <label for="title" class="form-label fw-bold">글 제목<sup class="text-danger">*</sup></label>
