--- a/flow2and4/pyduck/community/templates/community/post/post.html.jinja
+++ b/flow2and4/pyduck/community/templates/community/post/post.html.jinja
@@ -32,6 +32,8 @@
                     <div class="d-flex align-items-center gap-1">
                         <img class="rounded-circle" src="{{ post.user.avatar.url }}" width="33" height="33">
                         <span>{{ post.user.nickname }}</span>
+                        <small class="text-secondary"><sl-relative-time date="{{ post.created_at }}"
+                                              lang="ko"></sl-relative-time></small>
                     </div>
                     <div class="d-flex gap-2">
                         {% if post.history|length %}
@@ -58,7 +60,7 @@
                                 <li>
                                     {% if post.comment_count is gt 0 %}
                                     <div data-bs-toggle="tooltip"
-                                         data-bs-title="댓글이 달린 글의 경우 별도의 요청 없이 삭제할 수 없습니다."
+                                         data-bs-title="댓글이 달린 글의 경우 삭제할 수 없습니다. 비공개글로 전환하시면 댓글에 참여한 사람들만 글을 볼 수 있습니다."
                                          style="cursor:not-allowed;">
                                         <div
                                              class="dropdown-item disabled d-flex justify-content-between align-items-center">
@@ -108,50 +110,55 @@
             </div>
         </div>
     </div>
-</div>
-<div class="container px-2 px-lg-5 pt-2 comments">
-    {% for post_comment in post_comment_pagination %}
-    {{ render_post_comment(post_comment) }}
-    <!-- [start] infinite scroll trigger -->
-    {% if loop.last and post_comment_pagination.has_next %}
-    <div
-         hx-get="{{ url_for('pyduck.community.comments_to_post', post_id=post.id, page=post_comment_pagination.next_num) }}"
-         hx-trigger="revealed"
-         hx-swap="afterend">
+    <div class="comments">
+        {% for post_comment in post_comment_pagination %}
+        {{ render_post_comment(post_comment) }}
+        <!-- [start] infinite scroll trigger -->
+        {% if loop.last and post_comment_pagination.has_next %}
+        <div
+             hx-get="{{ url_for('pyduck.community.comments_to_post', post_id=post.id, page=post_comment_pagination.next_num) }}"
+             hx-trigger="revealed"
+             hx-swap="afterend">
+        </div>
+        {% endif %}
+        <!-- infinite scroll trigger [end] -->
+        {% endfor %}
     </div>
-    {% endif %}
-    <!-- infinite scroll trigger [end] -->
-    {% endfor %}
-</div>
-<div class="container px-2 px-lg-5 pb-5">
     <div class="row">
-        <div class="col-12 col-lg-8 pt-3">
+        <div class="col-12 col-lg-8 py-3">
             <div x-data="{
-                    editmode: false
+                    commentmode: false
                 }"
-                 @postcomment-created="editmode=false">
+                 @postcomment-created="commentmode=false">
                 <button
                         class="btn btn-outline-secondary w-100"
-                        @click="editmode=true; $nextTick(() => {$dispatch('require-editor')})"
-                        x-show="!editmode">
+                        @click="commentmode=true; $nextTick(() => {$dispatch('require-editor')})"
+                        x-show="!commentmode">
                     <span>댓글 작성하기</span>
                 </button>
-                <template x-if="editmode">
-                    <form class="border rounded-2 p-3 comment"
-                          hx-post="{{ url_for('pyduck.community.post_comment', post_id=post.id )}}"
-                          hx-target=".comments"
-                          hx-swap="beforeend">
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                        <input type="hidden" name="post_id" value="{{ post.id }}">
-                        <textarea id="editor" name="content"></textarea>
-                        <div class="pt-2 text-end">
-                            <button type="button"
-                                    class="btn btn-secondary rounded-0"
-                                    @click="editmode=false">취소하기</button>
-                            <button class="btn btn-success rounded-0">등록하기</button>
-                        </div>
-                    </form>
-                </template>
+                <div x-show="commentmode" x-transition>
+                    <template x-if="commentmode">
+                        <form class="border rounded-2 p-3 comment"
+                              hx-post="{{ url_for('pyduck.community.post_comment', post_id=post.id )}}"
+                              hx-target=".comments"
+                              hx-swap="beforeend"
+                              data-editor-type="new-post-comment">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                            <input type="hidden" name="post_id" value="{{ post.id }}">
+                            <div class="fw-bold text-success pb-3">
+                                <i class="bi bi-chat-right"></i>
+                                <span>댓글 작성 중...</span>
+                            </div>
+                            <textarea id="editor" name="content"></textarea>
+                            <div class="pt-2 text-end">
+                                <button type="button"
+                                        class="btn btn-secondary rounded-0"
+                                        @click="commentmode=false">취소하기</button>
+                                <button class="btn btn-success rounded-0">등록하기</button>
+                            </div>
+                        </form>
+                    </template>
+                </div>
             </div>
         </div>
     </div>
