--- a/flow2and4/pyduck/templates/pyduck/base.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/base.html.jinja
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pyduck - tiny community for pythonista in Korea</title>
+    <link rel="icon" href="{{ url_for('pyduck.static', filename='favicon/favicon.svg') }}" type="image/svg+xml">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -17,7 +18,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Tagify -->
     <link href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
-
+    <!-- Shoelace -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.4.0/dist/themes/light.css" />
     <style>
         /* Bootstrap customization */
         .no-caret::after {
@@ -63,23 +65,8 @@
             -webkit-text-fill-color: transparent;
         }
 
-        /* ckeditor 5 cutomization */
-        .ck.ck-content:not(.ck-comment__input *) {
-            height: 300px;
-            width: 100%;
-            overflow-y: auto;
-        }
-
-        .answer .ck.ck-content:not(.ck-comment__input *),
-        .comment .ck.ck-content:not(.ck-comment__input *),
-        .post-comment .ck.ck-content:not(.ck-comment__input *) {
-            height: 150px;
-            width: 100%;
-        }
-
-        .about-me .ck.ck-content:not(.ck-comment__input *) {
-            height: 150px;
-            width: 100%;
+        [x-cloak] {
+            display: none !important;
         }
     </style>
 
@@ -97,10 +84,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-    </style>
 
-    {% block css %}
-    <style>
         .nav-item:hover {
             background-color: var(--bs-primary-bg-subtle);
         }
@@ -112,23 +96,42 @@
         .nav-item__sotsog:hover {
             background-color: var(--bs-success-bg-subtle);
         }
+
+        .sidebar__nav-link.active {
+            background-color: var(--bs-primary-bg-subtle);
+            color: var(--bs-primary-text-emphasis);
+        }
+
+        [data-editor-type="new-post"] .ck.ck-content:not(.ck-comment__input *) {
+            min-height: 300px;
+            max-height: 900px;
+            overflow-y: auto;
+        }
+
+        [data-editor-type="new-post-comment"] .ck.ck-content:not(.ck-comment__input *),
+        [data-editor-type="edit-post-comment"] .ck.ck-content:not(.ck-comment__input *) {
+            min-height: 120px;
+            max-height: 500px;
+            overflow-y: auto;
+        }
     </style>
+
+    {% block css %}
+
     {% endblock css %}
 </head>
 
 <body>
     {% include "pyduck/header/header.html.jinja" %}
     <div class="content container-fluid px-0">
-        <div class="d-flex align-items-stretch h-100">
+        <div class="d-flex h-100">
             <!-- [START] sidbar -->
-            <div class="bg-body-tertiary d-none d-lg-block" style="min-width:280px;">
+            <div class="bg-body-tertiary d-none d-lg-block" style="min-width:270px;">
                 {% include "pyduck/sidebar/sidebar.html.jinja" %}
             </div>
             <!-- sidebar [END] -->
-            <div class="flex-grow-1">
-                {% block main %}
-                {% endblock main %}
-            </div>
+            {% block main %}
+            {% endblock main %}
         </div>
     </div>
     {% include "pyduck/footer/footer.html.jinja" %}
@@ -320,6 +323,9 @@
     <!-- Tagify -->
     <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
     <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+    <!-- Shoelace -->
+    <script type="module"
+            src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.4.0/dist/shoelace-autoloader.js"></script>
     <!-- 3-rd party javascript [END] -->
 
     <script>
