before production: just saving

--- a/flow2and4/pyduck/templates/pyduck/base.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/base.html.jinja
@@ -315,6 +315,7 @@
     <script src="https://unpkg.com/htmx.org@1.9.0"
             integrity="sha384-aOxz9UdWG0yBiyrTwPeMibmaoq07/d3a96GCbb9x60f3mOt5zwkjdbcHFnKH8qls"
             crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org/dist/ext/sse.js"></script>
     <!-- Alpine.js -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.12.0/dist/cdn.min.js"></script>
     <!-- CKEditor 5 -->
