--- a/flow2and4/pyduck/templates/pyduck/header/header.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/header/header.html.jinja
@@ -20,7 +20,14 @@
             </div>
             {% if current_user.is_authenticated %}
             <div class="d-flex align-items-center gap-2">
-                <div class="btn-group">
+                <div class="btn-group"
+                     hx-ext="sse"
+                     sse-connect="{{ url_for('pyduck.sse.stream_to_user', user_id=current_user.id) }}"
+                     x-data="{
+                        read: true
+                     }"
+                     @notification.window="console.log('choco in the building')"
+                     data-pyduck-bell>
                     <button
                             class="btn btn-outline-secondary border-0 rounded-circle dropdown-toggle no-caret"
                             style="padding-inline:10px;"
@@ -29,11 +36,19 @@
                             data-bs-auto-close="true"
                             aria-expanded="false"
                             data-bs-offset="0,5"
-                            hx-get="{{ url_for('pyduck.community.index', category='life') }}"
-                            hx-target="[data-notification-container]"
-                            hx-swap="innerHTML">
-                        <span class="fs-5">
+                            hx-get="{{ url_for('pyduck.notification.bell') }}"
+                            hx-trigger="sse:notification"
+                            hx-swap="outerHTML"
+                            hx-target="[data-pyduck-bell]">
+                        <span class="fs-5 position-relative">
                             <i class="bi bi-bell"></i>
+                            <template x-if="!read">
+                                <span
+                                      class="position-absolute translate-middle badge border border-light rounded-circle bg-danger"
+                                      style="padding:5px; top:3px; left:18px;">
+                                    <span class="visually-hidden">unread notifications</span>
+                                </span>
+                            </template>
                         </span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end pt-0" data-notification-container>
